--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -67,6 +67,11 @@
 "screen.game_details.section.players" = "მოთამაშეები";
 "screen.game_details.start_game.title" = "თამაშის დაწყება";
 "screen.game_details.create_teams" = "გუნდების შექმნა";
+"screen.game_details.game_mode.title" = "თამაშის რეჟიმი";
+"screen.game_details.classic.title" = "კლასიკური";
+"screen.game_details.classic.description" = "ითამაშე თითო სიტყვით";
+"screen.game_details.arcade.title" = "არკადი";
+"screen.game_details.arcade.description" = "ითამაშე 5 სიტყვით ერთად";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "დაამატე გუნდები თამაშის დასაწყებად";
@@ -109,6 +114,7 @@
 "screen.game.winning_view.game_details.title" = "დაბრუნება";
 "screen.game.winning_view.description" = "თქვენ მოიგეთ %@ ქულით";
 "screen.game.game_share_view.title" = "გამარჯვებული გუნდია %@ 🥳";
+"screen.game.arcade.skipButton" = "გამოტოვება (-2 ქულა)";
 
 // MARK: - Game Share
 "screen.game_share.title" = "გააზიარე შედეგები!";
