--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -71,7 +71,7 @@
 "screen.game_details.classic.title" = "კლასიკური";
 "screen.game_details.classic.description" = "ითამაშე თითო სიტყვით";
 "screen.game_details.arcade.title" = "არკადი";
-"screen.game_details.arcade.description" = "ითამაშე 5 სიტყვით ერთად";
+"screen.game_details.arcade.description" = "ითამაშე ერთდროულად 5 სიტყვით";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "დაამატე გუნდები თამაშის დასაწყებად";
@@ -114,7 +114,7 @@
 "screen.game.winning_view.game_details.title" = "დაბრუნება";
 "screen.game.winning_view.description" = "თქვენ მოიგეთ %@ ქულით";
 "screen.game.game_share_view.title" = "გამარჯვებული გუნდია %@ 🥳";
-"screen.game.arcade.skipButton" = "გამოტოვება (-2 ქულა)";
+"screen.game.arcade.skipButton" = "ახალი სიტყვები (-2 ქულა)";
 
 // MARK: - Game Share
 "screen.game_share.title" = "გააზიარე შედეგები!";
