--- a/Gamoitsani/Resources/Localization/tr.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/tr.lproj/Localizable.strings
@@ -73,6 +73,9 @@
 "screen.game_details.classic.description" = "Tek seferde bir kelime oyna";
 "screen.game_details.arcade.title" = "Arcade";
 "screen.game_details.arcade.description" = "Aynı anda 5 kelime oyna";
+"screen.game_details.loading_words.message" = "Kelime indirme devam ediyor";
+"screen.game_details.storage_warning.title" = "Yetersiz depolama alanı";
+"screen.game_details.storage_warning.message" = "Kelimeler indirilemedi, lütfen tekrar deneyin";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "Oynamaya başlamak için takım ekleyin";
