--- a/Gamoitsani/Resources/Localization/az.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/az.lproj/Localizable.strings
@@ -73,6 +73,9 @@
 "screen.game_details.classic.description" = "Bir dəfədə bir söz oyna";
 "screen.game_details.arcade.title" = "Arkada";
 "screen.game_details.arcade.description" = "Eyni anda 5 söz oyna";
+"screen.game_details.loading_words.message" = "Sözlərin yüklənməsi davam edir";
+"screen.game_details.storage_warning.title" = "Yetərsiz yaddaş";
+"screen.game_details.storage_warning.message" = "Sözləri yükləmək mümkün olmadı, yenidən cəhd edin";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "Oynamağa başlamaq üçün komanda əlavə edin";
