--- a/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
@@ -73,6 +73,9 @@
 "screen.game_details.classic.description" = "Play one word at a time";
 "screen.game_details.arcade.title" = "Arcade";
 "screen.game_details.arcade.description" = "Play with 5 words at once";
+"screen.game_details.loading_words.message" = "Downloading words in progress";
+"screen.game_details.storage_warning.title" = "Insufficient storage";
+"screen.game_details.storage_warning.message" = "Failed to download words, please try again";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "Add teams to start playing";
