--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -73,6 +73,9 @@
 "screen.game_details.classic.description" = "ითამაშე თითო სიტყვით";
 "screen.game_details.arcade.title" = "არკადა";
 "screen.game_details.arcade.description" = "ითამაშე ერთდროულად 5 სიტყვით";
+"screen.game_details.loading_words.message" = "მიმდინარეობს სიტყვების გადმოწერა";
+"screen.game_details.storage_warning.title" = "არასაკმარისი მეხსიერება";
+"screen.game_details.storage_warning.message" = "სიტყვების გადმოწერა ვერ მოხდა, სცადეთ თავიდან";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "დაამატე გუნდები თამაშის დასაწყებად";
