--- a/Gamoitsani/Resources/Localization/az.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/az.lproj/Localizable.strings
@@ -120,6 +120,20 @@
 "screen.game.game_share_view.title" = "Qalib komanda %@ 🥳";
 "screen.game.arcade.skipButton" = "Yeni sözlər (-2 xal)";
 
+// MARK: - Game Scoreboard
+"screen.game_scoreboard.title" = "Nəticələr";
+"screen.game_scoreboard.post_game_scoreboard.final_score" = "Yekun Hesab: %@";
+"screen.game_scoreboard.post_game_scoreboard.words_guessed" = "Təxmin edilən sözlər";
+"screen.game_scoreboard.post_game_scoreboard.words_skipped" = "Sözlər Atıldı";
+"screen.game_scoreboard.post_game_scoreboard.best_streak" = "Ən yaxşı zolaq";
+"screen.game_scoreboard.post_game_scoreboard.average_time" = "Orta vaxt";
+"screen.game_scoreboard.post_game_scoreboard.sets_skipped" = "Dəstlər Atlandı";
+"screen.game_scoreboard.stat_card.words_guessed" = "Təxmin edilən sözlər";
+"screen.game_scoreboard.stat_card.words_skipped" = "Sözlər Atlandı";
+"screen.game_scoreboard.performance_stat_row.best_streak" = "Ən yaxşı zolaq";
+"screen.game_scoreboard.performance_stat_row.average_time" = "Orta vaxt";
+"screen.game_scoreboard.performance_stat_row.sets_skipped" = "Dəstlər Atlandı";
+
 // MARK: - Game Share
 "screen.game_share.title" = "Xalı paylaş!";
 "screen.game_share.share_to" = "Buraya paylaş";
