--- a/Gamoitsani/Resources/Localization/hy.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/hy.lproj/Localizable.strings
@@ -76,6 +76,7 @@
 "screen.game_details.loading_words.message" = "Բառերի ներբեռնումը շարունակվում է";
 "screen.game_details.storage_warning.title" = "Անբավարար հիշողություն";
 "screen.game_details.storage_warning.message" = "Չհաջողվեց ներբեռնել բառերը, փորձեք կրկին";
+"screen.game_details.super_word.description" = "Պատահական սուպեր բառ (3 միավոր)";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "Ավելացրեք թիմեր խաղը սկսելու համար";
