--- a/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
@@ -76,6 +76,7 @@
 "screen.game_details.loading_words.message" = "Завантаження слів триває";
 "screen.game_details.storage_warning.title" = "Недостатньо пам’яті";
 "screen.game_details.storage_warning.message" = "Не вдалося завантажити слова, спробуйте ще раз";
+"screen.game_details.super_word.description" = "Випадкове супер слово (3 бали)";
 
 // Teams
 "screen.game_details.teams.add_placeholder" = "Додайте команди, щоб почати гру";
