modify language picker in settings

--- a/Gamoitsani/Resources/Localization/az.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/az.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "yesPolite" = "Bəli";
 "no" = "Xeyr";
 "ok" = "Oldu";
+"close" = "Bağla";
 "add" = "Əlavə et";
 "add_it" = "Əlavə et";
 "change" = "Dəyişdir";
