--- a/Gamoitsani/Resources/Localization/hy.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/hy.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "yesPolite" = "Այո";
 "no" = "Ոչ";
 "ok" = "Լավ";
+"close" = "Փակել";
 "add" = "Ավելացնել";
 "add_it" = "Ավելացնել";
 "change" = "Փոխել";
