--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "yesPolite" = "დიახ";
 "no" = "არა";
 "ok" = "კარგი";
+"close" = "დახურვა";
 "add" = "დამატება";
 "add_it" = "დაამატე";
 "change" = "შეცვალე";
