--- a/Gamoitsani/Resources/Localization/tr.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/tr.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "yesPolite" = "Evet";
 "no" = "Hayır";
 "ok" = "Tamam";
+"close" = "Kapat";
 "add" = "Ekle";
 "add_it" = "Ekle";
 "change" = "Değiştir";
