--- a/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
@@ -12,6 +12,7 @@
 "yesPolite" = "Так";
 "no" = "Ні";
 "ok" = "OK";
+"close" = "Закрити";
 "add" = "Додати";
 "add_it" = "Додати";
 "change" = "Змінити";
